--- a/tarea9/public/.htaccess
+++ b/tarea9/public/.htaccess
@@ -1,7 +1,7 @@
 Options -Multiviews
 RewriteEngine On
 
-RewriteBase /test9/public/
+RewriteBase /tarea9/public/
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
